# hse-software-design-homework

./: .travis.yml
cli/: CMakeLists.txt  GREP_CMDLINE_ARG_PARSER.md  README.md  main.cpp
cli/lib/: cli.cpp  cli.h
cli/lib/common/: char_utils.cpp  char_utils.h  escaped_char.cpp  escaped_char.h  exit_exception.cpp  exit_exception.h  ext_char.cpp  ext_char.h  istream_wrapper.cpp  istream_wrapper.h  pipe.cpp  pipe.h
cli/lib/environment/: environment.cpp  environment.h  var_expander.cpp  var_expander.h
cli/lib/executor/: execute.cpp  execute.h  executor.cpp  executor.h
cli/lib/executor/private/: builtin_executors.cpp  builtin_executors.h  detached_executor_base.cpp  detached_executor_base.h  external_executor.cpp  external_executor.h
cli/lib/parser/: command.cpp  command.h  parse.cpp  parse.h
cli/lib/tokenize/: token.cpp  token.h  tokenize_dfa.cpp  tokenize_dfa.h  tokenizer.cpp  tokenizer.h
cli/lib/tokenizer/: token.cpp  tokenize_dfa.cpp  tokenize_dfa.h  tokenizer.cpp  tokenizer.h
cli/test/: command_test.cpp  environment_test.cpp  example_test.cpp  execute_test.cpp  executor_test.cpp  parse_test.cpp  sample_test.cpp  tokenizer_test.cpp  var_expander_test.cpp
